Lesson 20 - API Implementation: Implemented API endpoints for Category
