# config/packages/nelmio_api_doc.yaml
@@ -50,7 +50,7 @@ nelmio_api_doc:
                     type: integer
                   message:
                     type: string
-      /api/user/registration:
+      /api/user:
         post:
           description: User Registration
           security: []
@@ -91,7 +91,6 @@ nelmio_api_doc:
                 properties:
                   error:
                     type: string
-      /api/user/list:
         get:
           description: User List
           tags:
@@ -121,6 +120,108 @@ nelmio_api_doc:
                 properties:
                   error:
                     type: string
+      /api/category:
+        post:
+          description: Creating of category
+          tags:
+            - Category
+          produces:
+            - application/json
+          parameters:
+            - name: Category details
+              description: Category details
+              required: true
+              in: body
+              schema:
+                type: object
+                properties:
+                  name:
+                    type: string
+          responses:
+            '200':
+              description: Created category
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  title:
+                    type: string
+            '400':
+              description: Bad request
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+            '401':
+              description: Access denied
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        get:
+          description: Get categories
+          tags:
+            - Category
+          produces:
+            - application/json
+          responses:
+            '200':
+              description: List of categories
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    title:
+                      type: string
+            '400':
+              description: Bad request
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+            '401':
+              description: Access denied
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+#      /api/category/{id}:
+#        delete:
+#          description: Delete category
+#          tags:
+#            - Category
+#          produces:
+#            - application/json
+#          parameters:
+#            - name: Category id
+#              description: Id of category to delete
+#              required: true
+#              in: path
+#          responses:
+#            '200':
+#              description: Category was deleted
+#            '401':
+#              description: Access denied
+#              schema:
+#                type: object
+#                properties:
+#                  error:
+#                    type: string
+#            '404':
+#              description: Category not found
+#              schema:
+#                type: object
+#                properties:
+#                  error:
+#                    type: string
 
   areas: # to filter documented areas
     path_patterns:
